<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cajeros UY</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mapa">MapaActivity</string>
    <string name="Bienvenido">Cajeros UY</string>
    <string name="btnViajar">Viajar en el Tiempo</string>
    <string name="btnInicio">Mostrar Cercanos</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="opcionesDrawer">
        <item>Inicio</item>
        <item>Mostrar x Departamento</item>
        <item>Solo Banred</item>
        <item>Solo RedBrou</item>
        <item>Mostrar Cercanos</item>
        <item>Cercanos RedBrou</item>
        <item>Cercanos Banred</item>
        <item>Opciones</item>
        <item>Acerca de</item>
    </string-array>

    <string name="btnBuscarCercanos">Buscar Cercanos</string>
    <string name="soloBanred">Mostrar Cercanos BanRed</string>
    <string name="btnMostrarSoloRedBrou">Mostrar Cercanos Redbrou</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_activity_splash_screen">Activity_splashScreen</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="txtCercanos">Distancia Cajeros Cercanos</string>
    <string name="btnGuardar">Guardar</string>
    <string name="txtMetros">Km</string>
    <string name="title_activity_guardar">GuardarActivity</string>
    <string name="guardar_titulo">Guardar Nuevo Cajero</string>
    <string name="guardar_Nombre">Nombre</string>
    <string name="guardar_Direccion">Direccion</string>
    <string name="guardar_tipo">Tipo</string>
    <string name="guardar_Latitud">Latitud</string>
    <string name="guardar_Longitud">Longitud</string>
    <string name="guardar_GuardarCajero">Guardar Cajero</string>

    <string-array name="tipoCajero">
        <item>RedBrou</item>
        <item>Banred</item>
        <item>Otros</item>
    </string-array>
    <string-array name="departamento">
        <item>Artigas</item>
        <item>Canelones</item>
        <item>Cerro Largo</item>
        <item>Colonia</item>
        <item>Durazno</item>
        <item>Flores</item>
        <item>Florida</item>
        <item>Lavalleja</item>
        <item>Maldonado</item>
        <item>Montevideo</item>
        <item>Paysandú</item>
        <item>Río Negro</item>
        <item>Rivera</item>
        <item>Rocha</item>
        <item>Salto</item>
        <item>San José</item>
        <item>Soriano</item>
        <item>Tacuarembó</item>
        <item>Treinta y Tres</item>
    </string-array>

    <string name="guardar_departamento">Departamento</string>
    <string name="title_activity_acerca_de">AcercaDe</string>
    <string name="txtNombre">Cajeros UY</string>
    <string name="txtTextoAcercaDe">
        Cajeros UY es una aplicación que tiene el objetivo de mostrar la ubicación de los Cajeros Automaticos en el Uruguay.\n\n
        \t \t \t \t \t \t \t \t \t \t \t \t \t Desarrollado por:\n 
        
        	
    </string>
    <string name="btnOpinion">Danos tu Opinion</string>
    <string name="txtDepartamento">Departamento</string>
    <string name="btnMostrarDepartamento">Por Departamento</string>
    <string name="title_activity_test">testActivity</string>

</resources>
