<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.infozona.proyectotoronto.GuardarActivity"
    tools:ignore="MergeRootFrame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

<RelativeLayout 
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    tools:context="com.infozona.proyectotoronto.AcercaDe"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/txtAcercaNombreApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="21dp"
        android:text="@string/txtNombre"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:src="@drawable/infozonalogo180" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtVersion"
        android:layout_marginTop="53dp"
        android:text="@string/txtTextoAcercaDe"
        android:textColor="@android:color/black" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAcercaNombreApp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btnDanosTuOpinion"
        android:layout_width="@dimen/ancho_boton"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_background_states"
        android:drawableLeft="@drawable/icon_gmail"
        android:gravity="center"
        android:text="@string/btnOpinion"
        android:textColor="#FCFCFC"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>
</ScrollView>
